--- a/service.html
+++ b/service.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-       <title>Flomatexs Construction Limited </title>
-        <link rel = "icon" href = "img/flomatexs.png" type = "image/x-icon">
-
+    
+        <title>Sai Manikanta Constructions </title>
+        <link rel="icon" href="img/myPics/Sai Manikanta Constructions Logo.png" type="image/x-icon">
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
