--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
                             </div>
                             <div class="service-text">
                                 <h3>Commercial Construction</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -539,7 +539,7 @@
                             </div>
                             <div class="service-text">
                                 <h3>Residential Construction</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -556,7 +556,7 @@
                             <div class="service-text">
                                 <h3>
                                     Pre-Construction</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -573,7 +573,7 @@
                             <div class="service-text">
                                 <h3>
                                     Site Management</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -590,7 +590,7 @@
                             <div class="service-text">
                                 <h3>
                                     Infrastructure Construction</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -606,7 +606,7 @@
                             </div>
                             <div class="service-text">
                                 <h3>Civil Engineering</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -623,7 +623,7 @@
                             <div class="service-text">
                                 <h3>
                                     Landscape Construction</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
@@ -641,7 +641,7 @@
                                 <h3>
 
                                     Special Projects</h3>
-                                <a class="btn" href="port.html">+</a>
+                                <a class="btn" href="portfolio.html">+</a>
                             </div>
                         </div>
                     </div>
